<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/statusText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/status_text_initial"
        android:textColor="@color/text_color"
        android:textColorHighlight="@color/text_color"
        android:textColorHint="@color/text_color"
        android:textColorLink="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:height="170sp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="monospace"
        android:gravity="center|center"
        android:text="@string/timer_text_initial"
        android:textColor="@color/timer_text_color"
        android:textColorHighlight="@color/timer_text_color"
        android:textColorLink="@color/timer_text_color"
        android:textIsSelectable="false"
        android:textSize="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusText" />

    <Button
        android:id="@+id/buttonA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:height="76dp"
        android:backgroundTint="@color/button_background_color"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:onClick="openFileDialog"
        android:text="@string/button_a"
        android:textColor="@color/button_text_color"
        android:textSize="34sp"
        app:cornerRadius="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerText"
        app:strokeWidth="0dp" />

    <Button
        android:id="@+id/buttonB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:height="76dp"
        android:backgroundTint="@color/button_background_color"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:onClick="openFileDialog"
        android:text="@string/button_b"
        android:textColor="@color/button_text_color"
        android:textSize="34sp"
        app:cornerRadius="6dp"
        app:layout_constraintStart_toEndOf="@+id/buttonA"
        app:layout_constraintTop_toBottomOf="@+id/timerText"
        app:strokeWidth="0dp" />

    <Button
        android:id="@+id/buttonC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:height="76dp"
        android:backgroundTint="@color/button_background_color"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:onClick="openFileDialog"
        android:text="@string/button_c"
        android:textColor="@color/button_text_color"
        android:textSize="34sp"
        app:cornerRadius="6dp"
        app:layout_constraintStart_toEndOf="@+id/buttonB"
        app:layout_constraintTop_toBottomOf="@+id/timerText"
        app:strokeWidth="0dp" />

    <Button
        android:id="@+id/buttonD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:height="76dp"
        android:backgroundTint="@color/button_background_color"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:onClick="openFileDialog"
        android:text="@string/button_d"
        android:textColor="@color/button_text_color"
        android:textSize="34sp"
        app:cornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonC"
        app:layout_constraintTop_toBottomOf="@+id/timerText"
        app:strokeWidth="0dp" />

    <Button
        android:id="@+id/buttonE"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:height="76dp"
        android:backgroundTint="@color/button_background_color"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:onClick="openFileDialog"
        android:text="@string/button_e"
        android:textColor="@color/button_text_color"
        android:textSize="34sp"
        app:cornerRadius="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonA"
        app:strokeWidth="0dp" />

    <Button
        android:id="@+id/buttonF"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:height="76dp"
        android:backgroundTint="@color/button_background_color"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:onClick="openFileDialog"
        android:text="@string/button_f"
        android:textColor="@color/button_text_color"
        android:textSize="34sp"
        app:cornerRadius="6dp"
        app:layout_constraintStart_toEndOf="@+id/buttonA"
        app:layout_constraintTop_toBottomOf="@+id/buttonB"
        app:strokeWidth="0dp" />

    <Button
        android:id="@+id/buttonG"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:height="76dp"
        android:backgroundTint="@color/button_background_color"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:onClick="openFileDialog"
        android:text="@string/button_g"
        android:textColor="@color/button_text_color"
        android:textSize="34sp"
        app:cornerRadius="6dp"
        app:layout_constraintStart_toEndOf="@+id/buttonB"
        app:layout_constraintTop_toBottomOf="@+id/buttonC"
        app:strokeWidth="0dp" />

    <Button
        android:id="@+id/buttonH"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:height="76dp"
        android:backgroundTint="@color/button_background_color"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:onClick="openFileDialog"
        android:text="@string/button_h"
        android:textColor="@color/button_text_color"
        android:textSize="34sp"
        app:cornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/buttonC"
        app:layout_constraintTop_toBottomOf="@+id/buttonD"
        app:strokeWidth="0dp" />

    <Button
        android:id="@+id/playerStatusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/button_player_status_stopped"
        android:text="@string/player_status_stopped"
        app:cornerRadius="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>